# Adpulse

./: README.md  railway.json  render.yaml  setup.sh
adpulse/: README.md
adpulse/backend/src/main/resources/: application.properties
adpulse/backend/src/test/java/com/adpulse/: AdPulseApplicationTests.java
adpulse/cpp/: CMakeLists.txt
adpulse/cpp/include/: ClickFraudDetector.h  KeywordMatchEngine.h
adpulse/cpp/src/: KeywordMatchEngine.cpp
adpulse/cpp/tests/: engine_tests.cpp
adpulse/frontend/: package.json
adpulse/frontend/src/: index.css
adpulse/frontend/src/api/: apiService.js
adpulse/frontend/src/components/: Layout.jsx
adpulse/frontend/src/context/: AuthContext.jsx
adpulse/frontend/src/pages/: ABTestPage.jsx  AnalyticsPage.jsx  CampaignsPage.jsx  DashboardPage.jsx  FraudPage.jsx
backend/: Dockerfile  pom.xml
backend/src/main/java/com/adpulse/: AdPulseApplication.java
backend/src/main/java/com/adpulse/controller/: AuthController.java
backend/src/main/java/com/adpulse/dto/: AuthDTOs.java
backend/src/main/java/com/adpulse/model/: Campaign.java
backend/src/main/java/com/adpulse/repository/: UserRepository.java
backend/src/main/java/com/adpulse/security/: SecurityConfig.java
backend/src/main/resources/: application.properties
cpp/: build_wasm.sh
cpp/include/: ABTestEngine.h
cpp/src/: ABTestEngine.cpp  ClickFraudDetector.cpp
frontend/: index.html  vite.config.js
frontend/src/: main.jsx
frontend/src/pages/: KeywordPage.jsx  LoginPage.jsx  OptimizerPage.jsx  SettingsPage.jsx
frontend/src/test/: engines.test.js
(+10 files in other folders)
